--- a/자리표.html
+++ b/자리표.html
@@ -18,43 +18,43 @@
 
 <table>
   <tr>
-    <td colspan="7">Row 1, Column 1</td>
+    <td colspan="7">👩‍💻</td>
   </tr>
   <tr>
-    <td>Row 1, Column 1</td>
+    <td>이시후</td>
     <td>Row 1, Column 2</td>
     <td>Row 1, Column 3</td>
-    <td style="width: 10px;">복도</td>
-    <td>Row 1, Column 5</td>
+    <td>유성운</td>
+    <td style="width: 20px;">복도</td>
+    <td>이준우</td>
     <td>Row 1, Column 6</td>
-    <td>Row 1, Column 7</td>
   </tr>
   <tr>
     <td>Row 2, Column 1</td>
-    <td>Row 2, Column 2</td>
+    <td>장지민</td>
     <td>Row 2, Column 3</td>
+    <td>김유진</td>
     <td>복도</td>
-    <td>Row 2, Column 5</td>
+    <td>조성찬</td>
     <td>Row 2, Column 6</td>
-    <td>Row 2, Column 7</td>
   </tr>
   <tr>
-    <td>Row 3, Column 1</td>
-    <td>Row 3, Column 2</td>
+    <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
+    <td>권세혁</td>
     <td>Row 3, Column 3</td>
+    <td>최보원</td>
     <td>복도</td>
-    <td>Row 3, Column 5</td>
-    <td>Row 3, Column 6</td>
-    <td>Row 3, Column 7</td>
+    <td>신승주</td>
+    <td>조신익</td>
   </tr>
   <tr>
     <td>Row 4, Column 1</td>
-    <td>Row 4, Column 2</td>
-    <td>Row 4, Column 3</td>
+    <td>박영준</td>
+    <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
+    <td>신선애</td>
     <td>복도</td>
-    <td>Row 4, Column 5</td>
-    <td>Row 4, Column 6</td>
-    <td>Row 4, Column 7</td>
+    <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
+    <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
   </tr>
 </table>
 
