--- a/a_HTML/practice/HTML복습/index.html
+++ b/a_HTML/practice/HTML복습/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>z_HTML복습.html</title>
 </head>
+
 <body>
   <!--  
     ! 프로젝트 구조
@@ -33,5 +35,38 @@
     - footer 영역에는 간단한 내용으로 구성
       (Naver 로그인 페이지 참고)
   -->
+  <header>
+    <img src="images/logo.png" alt="메인 로고">
+    <form action="/search">
+      <input type="search" name="q" placeholder="검색...">
+      <button type="submit">검색</button>
+    </form>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="text.html">텍스트 연습</a></li>
+      <li><a href="list.html">리스트 연습</a></li>
+      <li><a href="table.html">테이블 연습</a></li>
+      <li><a href="form.html">form 연습</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section>
+      <h2>Section 태그 사용법</h2>
+      <p>Section 태그는 문서의 구획을 나눌 때 사용합니다. 각 구획은 관련된 내용을 담고 있어야 합니다.</p>
+    </section>
+    <article>
+      <h2>Article 태그 사용법</h2>
+      <p>Article 태그는 독립적으로 구분해 배포하거나 재사용할 수 있는 구조를 형성할 때 사용합니다. 예를 들어, 뉴스 기사, 블로그 포스트 등이 있습니다.</p>
+    </article>
+  </main>
+  <aside>
+    <img src="images/ad.jpg" alt="광고 이미지">
+    <video src="videos/ad.mp4" controls>비디오를 지원하지 않는 브라우저입니다.</video>
+  </aside>
+  <footer>
+    <p>© 2024 웹 연습 프로젝트. 모든 권리 보유.</p>
+  </footer>
 </body>
+
 </html>
