--- a/자리표.html
+++ b/자리표.html
@@ -10,6 +10,12 @@
     th, td {
         padding: 10px;
     }
+
+    #passage {
+      width: 100px;
+      background-color: lightblue;
+      text-align: center;
+    }
 </style>
 </head>
 <body>
@@ -18,14 +24,14 @@
 
 <table>
   <tr>
-    <td colspan="7">👩‍💻</td>
+    <td colspan="7"><p style="text-align: center; color: lightseagreen;">🖥️빔 프로젝터 스크린🖥️</p>👩‍💻 강사 이승아 </td>
   </tr>
   <tr>
     <td>이시후 420</td>
     <td>Row 1, Column 2</td>
     <td>Row 1, Column 3</td>
     <td>유성운 260</td>
-    <td style="width: 20px;">복도</td>
+    <td id="passage">복도</td>
     <td>이준우 470</td>
     <td>조수빈 152</td>
   </tr>
@@ -34,7 +40,7 @@
     <td>장지민 390</td>
     <td>Row 2, Column 3</td>
     <td>김유진 352</td>
-    <td>복도</td>
+    <td id="passage">복도</td>
     <td>조성찬 249</td>
     <td>Row 2, Column 6</td>
   </tr>
@@ -43,7 +49,7 @@
     <td>권세혁 670</td>
     <td>Row 3, Column 3</td>
     <td>최보원 180</td>
-    <td>복도</td>
+    <td id="passage">복도</td>
     <td>신승주 1040</td>
     <td>조신익 530</td>
   </tr>
@@ -52,7 +58,7 @@
     <td>박영준 300</td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
     <td>신선애 640</td>
-    <td>복도</td>
+    <td id="passage">복도</td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
   </tr>
