--- a/자리표.html
+++ b/자리표.html
@@ -54,7 +54,7 @@
     <td>조신익 530</td>
   </tr>
   <tr>
-    <td>Row 4, Column 1</td>
+    <td>박용재</td>
     <td>박영준 300</td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
     <td>신선애 640</td>
