--- a/a_HTML/practice/practice03/practice03-answer.html
+++ b/a_HTML/practice/practice03/practice03-answer.html
@@ -23,7 +23,7 @@
         <p><strong>서울대학교 컴퓨터공학과 졸업</strong></p>
         <p>컴퓨터 과학의 기본 원리에 대한 깊은 이해를 바탕으로 다양한 프로젝트와 연구에 참여하였습니다...</p>
         <!-- 추가 내용을 여기에 삽입 -->
-        <!-- <img src="images/images-folder.jpg" alt="" width="500"> -->
+        <img src="../../../images/dog.png" alt="" width="500">
     </section>
 
     <section id="career">
