--- a/자리표.html
+++ b/자리표.html
@@ -27,37 +27,37 @@
     <td colspan="7"><p style="text-align: center; color: lightseagreen;">🖥️빔 프로젝터 스크린🖥️</p>👩‍💻 강사 이승아 </td>
   </tr>
   <tr>
-    <td>이시후 420</td>
+    <td>이시후 420 >> 420</td>
     <td>Row 1, Column 2</td>
     <td>Row 1, Column 3</td>
-    <td>유성운 260</td>
+    <td>유성운 260 >> 310</td>
     <td id="passage">복도</td>
-    <td>이준우 470</td>
-    <td>조수빈 152</td>
+    <td>이준우 470 >> 400</td>
+    <td>조수빈 152 </td>
   </tr>
   <tr>
     <td>Row 2, Column 1</td>
     <td>장지민 390</td>
     <td>Row 2, Column 3</td>
-    <td>김유진 352</td>
+    <td>김유진 352 >> 418</td>
     <td id="passage">복도</td>
-    <td>조성찬 249</td>
-    <td>Row 2, Column 6</td>
+    <td>조성찬 249 >> 230</td>
+    <td>이윤정 @ >> 410</td>
   </tr>
   <tr>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
-    <td>권세혁 670</td>
+    <td>변지윤 500</td>
     <td>Row 3, Column 3</td>
     <td>최보원 180</td>
     <td id="passage">복도</td>
-    <td>신승주 1040</td>
-    <td>조신익 530</td>
+    <td>신승주 1040 >> 470</td>
+    <td>조신익 530 >> 420</td>
   </tr>
   <tr>
-    <td>박용재</td>
+    <td>박용재 @ >> 580</td>
     <td>박영준 300</td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
-    <td>신선애 640</td>
+    <td>신선애 640 >> 620</td>
     <td id="passage">복도</td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
     <td style="background-color: rgba(255, 0, 0, 0.304);"> X </td>
