--- a/노션/index.html
+++ b/노션/index.html
@@ -18,6 +18,9 @@
     ! HTML & CSS
     : https://roan-hill-431.notion.site/HTML-CSS-5333219710654eb9824e8bd86ca31c33?pvs=74
 
+    ! JavaScript 수업 배포 자료 (수강 전 자료)
+    : https://roan-hill-431.notion.site/JavaScript-b14af0d929e1424c80366f7fe4288143
+
     & 기술 면접 대비 자료
     ! HTML & CSS 질문지
     : https://roan-hill-431.notion.site/HTML-CSS-acfb5122b2af48d089f4e4d3f2e5248f?pvs=4
