--- a/c_JAVASCRIPT/practice/practice02/index.html
+++ b/c_JAVASCRIPT/practice/practice02/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS 비동기 처리</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JS 비동기 처리</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+  <div id="app">
+    <header>
+      <h1>Moive Search</h1>
+      <input type="text" id="searchInput" placeholder="Search for a movie...">
+      <button id="searchButton">Search</button>
+    </header>
+
+    <main>
+      <div id="movieList"></div>
+      <h2>Favorites</h2>
+      <ul id="favoritesList"></ul>
+    </main>
+  </div>
+
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
