--- a/노션/index.html
+++ b/노션/index.html
@@ -24,6 +24,9 @@
     & 기술 면접 대비 자료
     ! HTML & CSS 질문지
     : https://roan-hill-431.notion.site/HTML-CSS-acfb5122b2af48d089f4e4d3f2e5248f?pvs=4
+
+    & 프로젝트 주제 선정
+    : https://www.notion.so/korea-it-academy-lsa/df4e9a6f81674c3593115049831eb976
   -->
 </body>
 </html>
